ocfdocs/ocfdocs_Deployment_ocfdocs.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ocfdocs
spec:
  replicas: 1
  selector:
    matchLabels:
      transpire.ocf.io/deployment: ocfdocs
  template:
    metadata:
      labels:
        transpire.ocf.io/deployment: ocfdocs
    spec:
      containers:
      - image: ghcr.io/ocf/ocfdocs:22704668a12e059c34cd9c6422ee48d1a7634d9e
        imagePullPolicy: IfNotPresent
        name: main
        ports:
        - containerPort: 15000
