ocfdocs/ocfdocs_Ingress_ocfdocs.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    ingress.kubernetes.io/force-ssl-redirect: 'true'
    io.cilium/websocket: enabled
    kubernetes.io/tls-acme: 'true'
    projectcontour.io/websocket-routes: /
  name: ocfdocs
spec:
  ingressClassName: contour
  rules:
  - host: //mkdocs.ocf.berkeley.edu
    http:
      paths:
      - backend:
          service:
            name: ocfdocs
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - //mkdocs.ocf.berkeley.edu
    secretName: ocfdocs-tls
